#34-feat: add notification badge

--- a/frontend/src/styles/tailwind.css
+++ b/frontend/src/styles/tailwind.css
@@ -27,6 +27,10 @@
   @apply justify-center;
 }
 
+.MuiBadge-colorPrimary {
+  @apply !font-bold !text-white;
+}
+
 /* Your own custom component styles */
 
 /* Start purging... */
