--- a/frontend/src/styles/tailwind.css
+++ b/frontend/src/styles/tailwind.css
@@ -7,7 +7,8 @@
 /* Stop purging. */
 
 .MuiButton-text,
-.MuiButton-outlined {
+.MuiButton-outlined,
+.MuiTab-textColorPrimary {
   @apply !font-bold;
 }
 
