#137-fix: general styling issues

--- a/frontend/src/styles/tailwind.css
+++ b/frontend/src/styles/tailwind.css
@@ -20,12 +20,12 @@
   @apply !text-black;
 }
 
-.css-12sazjn-MuiButtonBase-root-MuiTab-root {
-  @apply !min-w-0 !px-3;
+.MuiTabs-flexContainer {
+  @apply !justify-center;
 }
 
-.MuiTabs-flexContainer {
-  @apply justify-center;
+.MuiTabs-flexContainer .MuiButtonBase-root {
+  @apply !min-w-0 !px-3;
 }
 
 .MuiBadge-colorPrimary {
